feat: user registration and login (alpha)
